fixed buttons from going out of the box

--- a/style/style.css
+++ b/style/style.css
@@ -170,6 +170,10 @@ button {
 
 }
 
+.next_button{
+  margin-top: 170px;
+}
+
 #button {
   float: right;
   margin-right: 110px;
@@ -290,7 +294,6 @@ button {
   #board {
     background: white;
     width: min(100%-50px, 65vmin);
-    height: 40vh;
     border-radius: 9px;
     padding: 15px;
   }
@@ -332,4 +335,17 @@ button {
     margin-bottom: -2px !important;
   }
 
+}
+
+
+/* // small device media queries for 768px  */
+
+@media (max-width:768px) {
+  #board {
+    height:auto;
+  }
+  
+  .next_button {
+  margin-top:130px;      
+  }
 }
